update difficulty wordings

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -155,7 +155,7 @@
             <label>(5)非常滿意</label>
           </li>
           </ul>
-          <label class="statement">(*)請問您認為剛剛測試的 Audio Captcha 的困難程度為何？（1: 非常困難; 5: 非常容易）</label>
+          <label class="statement">(*)請問您認為剛剛測試的 Audio Captcha 的難易程度為何？（1: 非常困難; 5: 非常容易）</label>
           <ul class='likert'>
             <li>
               <input type="radio" name="likert_fb1_2" value="1">
@@ -289,7 +289,7 @@
             <label>(5)非常滿意</label>
           </li>
           </ul>
-          <label class="statement">(*)請問您認為剛剛測試的 Audio Captcha 的困難程度為何？（1: 非常困難; 5: 非常容易）</label>
+          <label class="statement">(*)請問您認為剛剛測試的 Audio Captcha 的難易程度為何？（1: 非常困難; 5: 非常容易）</label>
           <ul class='likert'>
             <li>
               <input type="radio" name="likert_fb2_2" value="1">
@@ -423,7 +423,7 @@
             <label>(5)非常滿意</label>
           </li>
           </ul>
-          <label class="statement">(*)請問您認為剛剛測試的 Audio Captcha 的困難程度為何？（1: 非常困難; 5: 非常容易）</label>
+          <label class="statement">(*)請問您認為剛剛測試的 Audio Captcha 的難易程度為何？（1: 非常困難; 5: 非常容易）</label>
           <ul class='likert'>
             <li>
               <input type="radio" name="likert_fb3_2" value="1">
@@ -556,7 +556,7 @@
             <label>(5)非常滿意</label>
           </li>
           </ul>
-          <label class="statement">(*)請問您認為剛剛測試的 Audio Captcha 的困難程度為何？（1: 非常困難; 5: 非常容易）</label>
+          <label class="statement">(*)請問您認為剛剛測試的 Audio Captcha 的難易程度為何？（1: 非常困難; 5: 非常容易）</label>
           <ul class='likert'>
             <li>
               <input type="radio" name="likert_fb4_2" value="1">
